# dobby

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
config/: settings.yaml
projects/2026기아하모니움/: 2026-02-25.md
scripts/: daily_commit.sh  ingest.py
src/agent/: base.py  docs_agent.py
src/api/: app.py  router.py
src/core/: config.py
src/models/: document.py
src/prompts/: templates.py
src/utils/: logger.py
tests/unit/: test_health.py
